--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,389 +1,79 @@
-@charset "UTF-8";
-/* CSS Document */
-
-* {
-	margin:0px;
-	padding:0px;
-	letter-spacing:8px;
-	font-smooth: never;
-	-webkit-font-smoothing: none;
-	/*-moz-osx-font-smoothing: grayscale;*/
-
-	}
-
-body {
-	background-image:url(bg/bg_main2.gif);
-	background-color:black;
-	color:#980301;
-
-
-	}
-
-a {
-	text-decoration:none;
-
-	}
-
-a:link {
-	color:#8e717e;
-	}
-
-a:visited {
-	color:#8e717e;
-	}
-
-a:hover {
-	color:#8e717e;
-	animation: wiredB2 2s ease-out infinite;
-
-	}
-
-a:active {
-	color:#8e717e;
-	}
-
-#navbar {
-	background-color:black;
-	width:800px;
-	height:auto;
-	margin-left:auto;
-	margin-right:auto;
-	margin-top:40px;
-	box-shadow:black 0px 5px 10px;
-	text-align:center;
-	padding-top:40px;
-
-	}
-
-
-h1 {
-	font-size:20px;
-	font-family:Times, "Times New Roman", serif;
-	font-weight:normal;
-	clear:both;
-	}
-
-h6 {
-	font-size:9px;
-
-	}
-
-.intro {
-	font-size:9px;
-
-	}
-
-.copy {
-	font-size:11px;
-
-	}
-
-.mail {
-	font-size:9px;
-
-	}
-
-.logo {
-	margin:20px;
-
-
-	}
-
-#navline {
-	font-size:13px;
-	letter-spacing:8px;
-	margin-bottom:20px;
-	color:black;
-	}
-
-.blinkFrame {
-	display:inline-block;
-	float:left;
-	width:400px;
-	font-weight:bolder;
-
-
-	}
-
-
-hr {
-
-	border-color:#black;
-	border-bottom-width:2px;
-
-
-
-	}
-
-#enterWired {
-	display:block;
-	background-image:url(15c.gif);
-	width:838px;
-	height:650px;
-	margin-left:auto;
-	margin-right:auto;
-	margin-top:30px;
-
-
-
-	}
-
-
-.article {
-	width:1200px;
-	background-color:black;
-	height:auto;
-	margin-left:auto;
-	margin-right:auto;
-	margin-top:40px;
-	box-shadow:black 0px 5px 10px;
-	text-align:center;
-	letter-spacing:8px;
-	font-size:13px;
-	padding-top:20px;
-
-
-	}
-
-.article p {
-	margin:20px;
-	font-size:13px;
-	}
-
-.date {
-	font-size:9px;
-	line-height:0px;
-	margin:0px;
-
-	}
-.author {
-	font-size:13px;
-	line-height:40px;
-	margin:0px;
-
-	}
-
-h5 {
-	font-weight:normal;
-	}
-
-b {
-	color:#8e717e;
-	font-weight:normal;
-
-	}
-
-#footer {
-	margin-top:70px;
-	color:#8e717e;
-	border:0px;
-	text-align:center;
-	letter-spacing:8px;
-	font-size:9px;
-	margin-bottom:20px;
-	}
-
-#footer span {
-	background-color:black;
-	padding:3px;
-
-
-	}
-
-#footer a {
-	text-decoration:underline;
-	}
-
-
-#note {
-	letter-spacing:0px;
-	}
-
-.article .comment {
-	font-size:9px;
-	}
-
-.jap {
-	font-smooth: auto !important;
-	-webkit-font-smoothing : auto !important;
-
-	}
-
-.iconA {
-	background-image:url(favicon_16px.gif);
-	background-repeat:no-repeat;
-	height:16px;
-	width:16px;
-	margin-left:auto;
-	margin-right:auto;
-	margin-bottom:10px;
-
-	}
-
-
-
-
-.del1s {
-	animation: blink 2s linear infinite;
-	animation-delay: 0s;
-	letter-spacing:0px
-
-	}
-
-.del1s5ms {
-	animation: blink 2s linear infinite;
-	animation-delay: 0.4s;
-	letter-spacing:0px
-
-	}
-
-.del2s {
-	animation: blink 2s linear infinite;
-	animation-delay: 0.8s;
-	letter-spacing:0px
-
-	}
-
-
-.del4s {
-	animation: blink 2s linear infinite;
-	animation-delay: 1.2s;
-	letter-spacing:0px
-
-	}
-
-.del5s {
-	animation: blink 2s linear infinite;
-	animation-delay: 1.6s;
-	letter-spacing:0px
-
-	}
-
-.del6s {
-	animation: blink 2s linear infinite;
-	animation-delay: 2s;
-	letter-spacing:0px
-
-	}
-
-.blink {
-  animation: blink 2s linear infinite;
+/*myfont*/
+@font-face {
+  font-family: myfont;
+  src: url(../fonts/Fudged.ttf);
+}
+@font-face {
+  font-family: myfont2;
+  src: url(../fonts/Archistico_Simple.ttf);
+}
+@font-face {
+  font-family: myfont3;
+  src: url(../fonts/BLUELINES.ttf);
+}
+/* (sa2 tails voice) customize your settings here! */
+.rowRowFightThePower{max-width:820px;margin-left:auto;margin-right:auto;padding:30px;border-radius:3px;}
+body{
+background-image:url(../images/home/efa.gif);
+/* IE6-9 background-size: 50px auto, cover;*/background-attachment:fixed;color:#fff5e0;margin:0;line-height:1.7;}
+body,h1,h2,h3,p{margin-top:0;letter-spacing:.01em;}
+h1{margin-bottom:7px;text-align:center;}
+h2,h3,p{margin-bottom:15px;}
+h1,h2,h3{font-family:'myfont3',courier,monospace;font-weight:normal;line-height:1.4;}
+h1,h3{color:#cc66ff;}
+h2,b,strong,i,em{color:white;}
+body,p{font-family:'myfont2',courier,monospace;font-size:20px;}
+/*a is the side bar links and stuff*/
+a, a:active{color:white;text-decoration:none;font-weight:normal;font-family:'myfont2',courier,monospace;}
+a:hover,a:focus{color: white;}
+a{transition: all 0.4s ease;}
+.text-center{text-align:center;}
+.img-center{display:block;margin-left:auto;margin-right:auto;height:100px;}
+.img-responsive{max-width:100%;height:auto;}
+
+/* template */
+/* md lg */ @media (min-width: 768px){.img-title{max-width:100%;height:auto;}}
+/* sm */ @media (max-width: 767px){.img-title{max-width:150px;height:auto;}}
+
+.contentLeft{padding:15px !important;background-image:url(../images/home/hair.gif);}
+/* md lg */ @media (min-width: 768px){.contentLeft{min-height:800px;border-radius:0 3px 3px 0;}}
+/* IE6-9 */background-size: 100% auto, cover;background-position:bottom center;background-repeat: no-repeat;}}
+/* sm */ @media (max-width: 767px){.contentLeft{border-radius:3px 3px 0 0;background:#3B2631;}}
+.contentRight{padding:25px !important;background-image:url(../images/home/tenor.gif);}
+/* md lg */ @media (min-width: 768px){.contentRight{min-height:800px;border-radius:0 3px 3px 0;}}
+/* sm */ @media (max-width: 767px){.contentRight{border-radius:0 0 3px 3px;}}
+.imgPixel img{image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;}
+.clearfix{clear:both;display:block;}
+
+.naviBG {background:white;padding:0;}
+.navi {display:block; margin-bottom:3px;}
+.navi img {width:15px;height:auto;vertical-align:-10%;margin-right:10px;margin-left:3px;}
+.new{width:10px;height:auto;vertical-align:5%;margin-left:5px;}
+.naviBanners{margin-bottom:5px;}
+.gridNeopets img,.gridArt img {width:150px;height:auto;background:#fff;border-radius:3px;}
+.gridVid img {width:150px;height:auto;border-radius:3px;opacity:0.7;}
+.gridMusic img {width:100px;height:auto;border-radius:3px;opacity:0.7;}
+.bull{width:22px;height:auto;margin-right:10px;vertical-align:-1%;}
+.imgCenterVert{vertical-align: middle;display:block;margin:auto;width:auto;height:auto;top:0;bottom:0;left:0;right:0;}
+.gridKao,.gridAnime,.gridVidya,.gridNeopets,.gridArt,.gridBlink,.gridButt,.gridIco{display:flex;align-items:center; /* horizontal */justify-content:center; /* vertical */}
+.gridKao,.gridAnime,.gridBlink,.gridButt,.gridIco,.gridVidya{image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;}
+.gridKao {height:90px;}
+.gridAnime {height:120px;}
+.gridVidya {height:120px;}
+.gridNeopets,.gridArt {height:175px;}
+.gridBlink {height:50px;}
+.gridButt {height:80px;}
+.gridIco {height:130px;}
+.gridArt img:hover,.gridArt img:focus{opacity:0.7;}
+.gridArt img{transition: all 0.4s ease;}
+
+/* md lg */ @media (min-width: 768px){
+.naviBanners{width:100%;height:auto;}
 }
 
-.Bfast {
-	  animation: blink 2s ease-out infinite;
-
-	}
-
-.wiredAnim {
-		  animation: wiredB 2s ease-in-out infinite;
-	}
-
-.wdel1s {
-	animation: wiredB 2s ease-in-out infinite;
-	animation-delay: 0.4s;
-	}
-
-.wdel2s {
-	animation: wiredB 2s ease-in-out infinite;
-	animation-delay: 0.8s;
-	}
-
-.wdel3s {
-	animation: wiredB 2s ease-in-out infinite;
-	animation-delay: 1.2s;
-	}
-
-#fontcolor {
-	color:white;
+/* sm */ @media (max-width: 767px){
+.naviBanners{width:100%;height:auto;max-width:200px;}
 }
 
-@keyframes blink {
-  50% {
-	  color:black;
-  }
- }
-
- @keyframes wiredB {
-  50% {
-	  color:#8e717e;
-	  text-shadow:#8e717e 1px 4px 5px;
-	  }
- }
-
- @keyframes wiredB2 {
-  50% {
-	  color:#980301;
-	  text-shadow:#980301 1px 1px 6px;
-	  }
- }
- /* width */
- ::-webkit-scrollbar {
-     width: 10px;
- }
-
- /* Track */
- ::-webkit-scrollbar-track {
-     background: #222;
- }
-
- /* Handle */
- ::-webkit-scrollbar-thumb {
-     background: #111;
- }
-
- /* Handle on hover */
- ::-webkit-scrollbar-thumb:hover {
-     background: #555;
- }
-
-/* overheadthing */
- .overlay {
-    height: 0;
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
-    overflow-y: hidden;
-    transition: 0.5s;
-}
-
-.overlay-content {
-    position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
-}
-
-.overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
-}
-
-.overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
-}
+/* default-ass column sizing stuff. blasted all else. don't need that bloat. */
+.container{margin:0 auto;padding:2px;}.row{box-sizing:border-box;display:flex;flex:0 1 auto;flex-flow:row wrap}.col-sm,[class^='col-sm-'],[class^='col-sm-offset-'],.row[class*='cols-sm-']>*{box-sizing:border-box;flex:0 0 auto;padding:2px;}.col-sm,.row.cols-sm>*{max-width:100%;flex-grow:1;flex-basis:0}.col-sm-1,.row.cols-sm-1>*{max-width:8.33333%;flex-basis:8.33333%}.col-sm-offset-0{margin-left:0}.col-sm-2,.row.cols-sm-2>*{max-width:16.66667%;flex-basis:16.66667%}.col-sm-offset-1{margin-left:8.33333%}.col-sm-3,.row.cols-sm-3>*{max-width:25%;flex-basis:25%}.col-sm-offset-2{margin-left:16.66667%}.col-sm-4,.row.cols-sm-4>*{max-width:33.33333%;flex-basis:33.33333%}.col-sm-offset-3{margin-left:25%}.col-sm-5,.row.cols-sm-5>*{max-width:41.66667%;flex-basis:41.66667%}.col-sm-offset-4{margin-left:33.33333%}.col-sm-6,.row.cols-sm-6>*{max-width:50%;flex-basis:50%}.col-sm-offset-5{margin-left:41.66667%}.col-sm-7,.row.cols-sm-7>*{max-width:58.33333%;flex-basis:58.33333%}.col-sm-offset-6{margin-left:50%}.col-sm-8,.row.cols-sm-8>*{max-width:66.66667%;flex-basis:66.66667%}.col-sm-offset-7{margin-left:58.33333%}.col-sm-9,.row.cols-sm-9>*{max-width:75%;flex-basis:75%}.col-sm-offset-8{margin-left:66.66667%}.col-sm-10,.row.cols-sm-10>*{max-width:83.33333%;flex-basis:83.33333%}.col-sm-offset-9{margin-left:75%}.col-sm-11,.row.cols-sm-11>*{max-width:91.66667%;flex-basis:91.66667%}.col-sm-offset-10{margin-left:83.33333%}.col-sm-12,.row.cols-sm-12>*{max-width:100%;flex-basis:100%}.col-sm-offset-11{margin-left:91.66667%}.col-sm-normal{order:initial}.col-sm-first{order:-999}.col-sm-last{order:999}@media screen and (min-width: 768px){.col-md,[class^='col-md-'],[class^='col-md-offset-'],.row[class*='cols-md-']>*{box-sizing:border-box;flex:0 0 auto;padding:2px;}.col-md,.row.cols-md>*{max-width:100%;flex-grow:1;flex-basis:0}.col-md-1,.row.cols-md-1>*{max-width:8.33333%;flex-basis:8.33333%}.col-md-offset-0{margin-left:0}.col-md-2,.row.cols-md-2>*{max-width:16.66667%;flex-basis:16.66667%}.col-md-offset-1{margin-left:8.33333%}.col-md-3,.row.cols-md-3>*{max-width:25%;flex-basis:25%}.col-md-offset-2{margin-left:16.66667%}.col-md-4,.row.cols-md-4>*{max-width:33.33333%;flex-basis:33.33333%}.col-md-offset-3{margin-left:25%}.col-md-5,.row.cols-md-5>*{max-width:41.66667%;flex-basis:41.66667%}.col-md-offset-4{margin-left:33.33333%}.col-md-6,.row.cols-md-6>*{max-width:50%;flex-basis:50%}.col-md-offset-5{margin-left:41.66667%}.col-md-7,.row.cols-md-7>*{max-width:58.33333%;flex-basis:58.33333%}.col-md-offset-6{margin-left:50%}.col-md-8,.row.cols-md-8>*{max-width:66.66667%;flex-basis:66.66667%}.col-md-offset-7{margin-left:58.33333%}.col-md-9,.row.cols-md-9>*{max-width:75%;flex-basis:75%}.col-md-offset-8{margin-left:66.66667%}.col-md-10,.row.cols-md-10>*{max-width:83.33333%;flex-basis:83.33333%}.col-md-offset-9{margin-left:75%}.col-md-11,.row.cols-md-11>*{max-width:91.66667%;flex-basis:91.66667%}.col-md-offset-10{margin-left:83.33333%}.col-md-12,.row.cols-md-12>*{max-width:100%;flex-basis:100%}.col-md-offset-11{margin-left:91.66667%}.col-md-normal{order:initial}.col-md-first{order:-999}.col-md-last{order:999}}@media screen and (min-width: 1280px){.col-lg,[class^='col-lg-'],[class^='col-lg-offset-'],.row[class*='cols-lg-']>*{box-sizing:border-box;flex:0 0 auto;padding:2px;}.col-lg,.row.cols-lg>*{max-width:100%;flex-grow:1;flex-basis:0}.col-lg-1,.row.cols-lg-1>*{max-width:8.33333%;flex-basis:8.33333%}.col-lg-offset-0{margin-left:0}.col-lg-2,.row.cols-lg-2>*{max-width:16.66667%;flex-basis:16.66667%}.col-lg-offset-1{margin-left:8.33333%}.col-lg-3,.row.cols-lg-3>*{max-width:25%;flex-basis:25%}.col-lg-offset-2{margin-left:16.66667%}.col-lg-4,.row.cols-lg-4>*{max-width:33.33333%;flex-basis:33.33333%}.col-lg-offset-3{margin-left:25%}.col-lg-5,.row.cols-lg-5>*{max-width:41.66667%;flex-basis:41.66667%}.col-lg-offset-4{margin-left:33.33333%}.col-lg-6,.row.cols-lg-6>*{max-width:50%;flex-basis:50%}.col-lg-offset-5{margin-left:41.66667%}.col-lg-7,.row.cols-lg-7>*{max-width:58.33333%;flex-basis:58.33333%}.col-lg-offset-6{margin-left:50%}.col-lg-8,.row.cols-lg-8>*{max-width:66.66667%;flex-basis:66.66667%}.col-lg-offset-7{margin-left:58.33333%}.col-lg-9,.row.cols-lg-9>*{max-width:75%;flex-basis:75%}.col-lg-offset-8{margin-left:66.66667%}.col-lg-10,.row.cols-lg-10>*{max-width:83.33333%;flex-basis:83.33333%}.col-lg-offset-9{margin-left:75%}.col-lg-11,.row.cols-lg-11>*{max-width:91.66667%;flex-basis:91.66667%}.col-lg-offset-10{margin-left:83.33333%}.col-lg-12,.row.cols-lg-12>*{max-width:100%;flex-basis:100%}.col-lg-offset-11{margin-left:91.66667%}.col-lg-normal{order:initial}.col-lg-first{order:-999}.col-lg-last{order:999}}
