--- a/test/testtwo.css
+++ b/test/testtwo.css
@@ -3,6 +3,14 @@
   font-family: myfont;
   src: url(../fonts/Fudged.ttf);
 }
+@font-face {
+  font-family: myfont2;
+  src: url(../fonts/Archistico_Simple.ttf);
+}
+@font-face {
+  font-family: myfont3;
+  src: url(../fonts/BLUELINES.ttf);
+}
 /* (sa2 tails voice) customize your settings here! */
 .rowRowFightThePower{max-width:820px;margin-left:auto;margin-right:auto;padding:30px;border-radius:3px;}
 body{
@@ -11,12 +19,12 @@ background-image:url(efa.gif);
 body,h1,h2,h3,p{margin-top:0;letter-spacing:.01em;}
 h1{margin-bottom:7px;text-align:center;}
 h2,h3,p{margin-bottom:15px;}
-h1,h2,h3{font-family:'myfont',courier,monospace;font-weight:normal;line-height:1.4;}
-h1,h3{color:#670BFF;}
+h1,h2,h3{font-family:'myfont3',courier,monospace;font-weight:normal;line-height:1.4;}
+h1,h3{color:#cc66ff;}
 h2,b,strong,i,em{color:white;}
-body,p{font-family:'TimesNewRoman',courier,monospace;font-size:20px;}
+body,p{font-family:'myfont2',courier,monospace;font-size:20px;}
 /*a is the side bar links and stuff*/
-a, a:active{color:white;text-decoration:none;font-weight:bold;font-family:'SometypeMonoBold',courier,monospace;}
+a, a:active{color:white;text-decoration:none;font-weight:normal;font-family:'myfont2',courier,monospace;}
 a:hover,a:focus{color: white;}
 a{transition: all 0.4s ease;}
 .text-center{text-align:center;}
