--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 /*myfont*/
 @font-face {
   font-family: myfont;
-  src: url(../fonts/Fudged.ttf);
+  src: url(../fonts/FUDGED.ttf);
 }
 @font-face {
   font-family: myfont2;
