--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,7 +9,7 @@
 }
 @font-face {
   font-family: myfont3;
-  src: url(../fonts/bluelines.ttf);
+  src: url(../fonts/lines.ttf);
 }
 /* (sa2 tails voice) customize your settings here! */
 .rowRowFightThePower{max-width:820px;margin-left:auto;margin-right:auto;padding:30px;border-radius:3px;}
