--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,8 +8,18 @@
   src: url(../fonts/Archistico_Simple.ttf);
 }
 @font-face {
-  font-family: myfont3;
+  font-family: myfont4;
   src: url(../fonts/lines.ttf);
+}
+@font-face {
+    font-family:'myfont3';
+    src:url('../includes/fonts/bluelines.eot');
+    src:url('../includes/fonts/bluelines.eot?#iefix') format('embedded-opentype'),
+            /* url('../includes/fonts/my-font.woff') format('woff'),*/
+            url('../includes/fonts/bluelines.ttf') format('truetype');
+            /* url('../includes/fonts/my-font.svg#my-font') format('svg');*/
+    font-weight:normal;
+    font-style:normal;
 }
 /* (sa2 tails voice) customize your settings here! */
 .rowRowFightThePower{max-width:820px;margin-left:auto;margin-right:auto;padding:30px;border-radius:3px;}
