htc acces and bitconnect

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,7 +9,7 @@
 }
 @font-face {
   font-family: myfont3;
-  src: url(../fonts/manbowlines.ttf);
+  src: url(../fonts/bluelines.ttf);
 }
 @font-face {
     font-family:'myfont4';
