--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,7 +10,7 @@
 /* WHY WONT BLUELIENS WORK */
 @font-face {
   font-family: myfont3;
-  src: url(../fonts/BLUELINES.ttf);
+  src: url(../fonts/ohmygosh.ttf);
 }
 @font-face {
   font-family: myfont4;
