--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -18,6 +18,12 @@
 }
 /* (sa2 tails voice) customize your settings here! */
 .rowRowFightThePower{max-width:820px;margin-left:auto;margin-right:auto;padding:30px;border-radius:3px;}
+body {
+	cursor:url(../images/nav/rsz_hover.png), auto;
+}
+a {
+	cursor:url(../images/nav/rsz_hoverreal.png), auto;
+}
 body{
 background-image:url(../images/home/efa.gif);
 /* IE6-9 background-size: 50px auto, cover;*/background-attachment:fixed;color:#fff5e0;margin:0;line-height:1.7;}
