--- a/projects/numpad/entry.css
+++ b/projects/numpad/entry.css
@@ -2,11 +2,32 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lobster|Major+Mono+Display|Poppins');
 
+@font-face {
+  font-family: myfont;
+  src: url(../../fonts/FUDGED.ttf);
+}
+@font-face {
+  font-family: myfont2;
+  src: url(../../fonts/Archistico_Simple.ttf);
+}
+@font-face {
+  font-family: myfont3;
+  src: url(../../fonts/nasalization-rg.ttf);
+}
+@font-face {
+  font-family: myfont4;
+  src: url(../../fonts/manbowlines.ttf);
+}
 /*
 font-family: 'Poppins', sans-serif;
 font-family: 'Lobster', cursive;
 font-family: 'Major Mono Display', monospace;
 */
+h2 {
+  font-family:'myfont4';
+  color:white;
+  font-size: 50px;
+}
 
 * { margin: 0; padding: 0; }
 #page{display:table;overflow:hidden;margin:0px auto;}
@@ -41,6 +62,7 @@ html{
   }
 }
 
+
 body {
   background-color: black;
   color: black;
@@ -74,12 +96,15 @@ html {
 }
 
 h1 {
-  font-family: 'Lobster', cursive;
-  color:black;
+  font-family: 'myfont4';
+  color:white;
+  font-size: 30px;
 }
 
+
 p {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'myfont3';
+  font-size: 20px;
 }
 
 .top {
