--- a/projects/numpad/entry.css
+++ b/projects/numpad/entry.css
@@ -18,6 +18,25 @@
   font-family: myfont4;
   src: url(../../fonts/manbowlines.ttf);
 }
+/* width */
+::-webkit-scrollbar {
+		width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+		background: #222;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+		background: #111;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+		background: #555;
+}
 /*
 font-family: 'Poppins', sans-serif;
 font-family: 'Lobster', cursive;
