--- a/randomlove/core.css
+++ b/randomlove/core.css
@@ -99,7 +99,7 @@ div:not(#content2) + div#content2 {
         rgba(0, 0, 0, 0.7),
         rgba(0, 0, 0, 0.7)
         ),
-        url('../images/sub/5.jpg');
+        url('../images/sub/22B.jpg');
 
     border: 3px double #808080;
 
@@ -271,7 +271,7 @@ hr {
         rgba(0, 0, 0, 0.7),
         rgba(0, 0, 0, 0.7)
         ),
-        url('../images/sub/5.jpg');
+        url('../images/sub/22B.jpg');
 
     border: 3px double #808080;
 
@@ -461,7 +461,7 @@ hr {
         rgba(0, 0, 0, 0.7),
         rgba(0, 0, 0, 0.7)
         ),
-        url('../images/sub/5.jpg');
+        url('../images/sub/22B.jpg');
 
     border: 3px double #808080;
 
