--- a/projects/numpad/entry.css
+++ b/projects/numpad/entry.css
@@ -151,7 +151,7 @@ box-shadow: 0 0 4px 4px #555555;
   margin-top: 1vw;
   border:.2vw solid white;
   border-radius: 1vw;
-  background: url(../../images/entries/m.jpg) repeat;
+  background: url(../../images/sub/2.jpg) repeat;
   background-color: black;
   background-size: 26vw;
 }
