--- a/randomlove/shopping/core.css
+++ b/randomlove/shopping/core.css
@@ -230,6 +230,7 @@ h3 {
     animation: flicker 0.2s infinite;
     font-size: 4em;
     line-height: 1.2em;
+        text-align: center;
 }
 
 hr {
