--- a/blog/test.css
+++ b/blog/test.css
@@ -86,7 +86,7 @@ a:active {
 h1 {
 	/*Title at very top*/
 	font-size:30px;
-	font-family: myfont;
+	font-family: myfont4;
 	font-weight:normal;
 	clear:both;
 	}
