the refference pages

--- a/projects/deskless/entry.css
+++ b/projects/deskless/entry.css
@@ -81,7 +81,7 @@ html,body{height:100%;}
 }
 
 html{
-  background:url(../../images/entries/g.gif);
+  background:url(../../images/entries/4.jpg);
 }
 
 /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
