--- a/randomlove/core.css
+++ b/randomlove/core.css
@@ -16,7 +16,7 @@
   src: url(../fonts/manbowlines.ttf);
 }
 body{
-    background-image:url(../images/randomlove/r.jpg);
+    background-image:url(../images/randomlove/e.jpg);
 }
 /* width */
 ::-webkit-scrollbar {
