colors wont change

--- a/ucc/test.css
+++ b/ucc/test.css
@@ -12,7 +12,7 @@ body {
   }
   
   .glitch, .glow {
-	color: #dfbfbf;
+	color: #bfdadf;
 	position: relative;
 	font-size: 9vw;
 	animation: glitch 5s 5s infinite;
