--- a/projects/core.css
+++ b/projects/core.css
@@ -18,6 +18,12 @@
 body{
     background-image:url(../images/sub/11.gif);
 }
+
+.rr {
+    font-size: 2.3em;
+
+}
+
 /* width */
 ::-webkit-scrollbar {
 		width: 10px;
