--- a/guestbook/core.css
+++ b/guestbook/core.css
@@ -363,10 +363,26 @@ hr {
 }
 
 
+#HCB_comment_box{border: 2px solid #FFFFFF; border-radius: 5px; padding: 10px; color:#FFFFFF; background: rgba(0, 0, 0, 0.5);}
+.hcb-mod b{color:rgb(150, 150, 150);}
+#HCB_comment_box textarea,#HCB_comment_box input.text{border-top:1px solid #e4e4e4;border-left:1px solid #e4e4e4;border-bottom:1px solid #eaeaea;border-right:1px solid #eaeaea;background-color:#f8f8f8;}
+#HCB_comment_box .hcb-wrapper-half{display:block;width:50%;float:left;}
+#HCB_comment_box .hcb-wrapper{clear:both;}
+#HCB_comment_box input.text{display:block;width:95%;}
+#HCB_comment_box input.submit{border-top:1px solid rgb(92, 92, 92);border-left:1px solid rgb(92, 92, 92);border-bottom:1px solid rgb(92, 92, 92);border-right:1px solid rgb(92, 92, 92);background-color:rgb(122, 122, 122);color:#000;font-weight:bold;cursor:pointer;}
+#HCB_comment_box div.comment{color:rgb(92, 92, 92); background: rgba(0, 0, 0, 0.5); border:3px double rgb(92, 92, 92) ; margin:5px; padding:2px;}
+#HCB_comment_box .comment .likes{color: rgb(134, 134, 134);}
+#HCB_comment_box .hcb-link{color:rgb(199, 199, 199);text-decoration:none;} 
 
-
-
-
+.home-desc{
+    visibility: hidden;
+  }
+  a{
+    visibility: hidden;
+  }
+.hcb-icon {
+    visibility: hidden;
+  }
 
 
 
