--- a/daily/entry.css
+++ b/daily/entry.css
@@ -158,6 +158,7 @@ h3{
   font-family: 'myfont3';
   color:white;
   font-size: 25px;
+  text-align: left;
 }
 
 p {
@@ -187,6 +188,20 @@ border-radius: 1vw;
   background-size: 26vw;
 }
 .main p{
+  text-align: left;
+  color: white;
+}
+.main2{
+  text-align: center;
+  padding: 3vw;
+  margin-top: 1vw;
+  border:.1vw solid gray;
+  border-radius: 4vw;
+  background: url(../images/daily/1.png) repeat;
+  background-color: black;
+  background-size: 26vw;
+}
+.main2 p{
   text-align: center;
   color: white;
 }
@@ -485,3 +500,6 @@ input[type='checkbox'] {
 .img-holder {position: relative; display: inline-block;}
 .img-holder img {display: block;}
 .img-holder p {position: absolute; top: 50%; left: 0; right: 0; transform: translate(0, -50%); text-align: center; color: #fff; text-shadow: 0 0 15px;}
+#ddd{
+  text-align:center;
+}
