--- a/code/ggldcs/entry.css
+++ b/code/ggldcs/entry.css
@@ -109,7 +109,8 @@ html,body{height:100%;}
 }
 
 html{
-  background:url(../../images/entries/4.jpg);
+  background:url(../../images/entries/4.png);
+ 
 }
 
 /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
