--- a/code/ggldcs/entry.css
+++ b/code/ggldcs/entry.css
@@ -109,7 +109,7 @@ html,body{height:100%;}
 }
 
 html{
-  background:url(../../images/entries/4.png);
+  background:url(../../images/entries/4.jpg);
  
 }
 
