--- a/reference/wii/entry.css
+++ b/reference/wii/entry.css
@@ -4,172 +4,44 @@
 
 @font-face {
   font-family: myfont;
-  src: url(../fonts/FUDGED.ttf);
+  src: url(../../fonts/FUDGED.ttf);
 }
 @font-face {
   font-family: myfont2;
-  src: url(../fonts/Archistico_Simple.ttf);
-}
-@font-face {
-  font-family: myfont33;
-  src: url(../fonts/komi.ttf);
+  src: url(../../fonts/Archistico_Simple.ttf);
 }
 @font-face {
   font-family: myfont3;
-  src: url(../fonts/nasalization-rg.ttf);
+  src: url(../../fonts/nasalization-rg.ttf);
 }
 @font-face {
   font-family: myfont4;
-  src: url(../fonts/manbowlines.ttf);
-}
-@font-face {
-  font-family: myfont333;
-  src: url(../fonts/lekton.ttf);
-}
-
-.glow {
-  color: #fff;
-  text-align: center;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate;
-  animation: glow 1s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes glow {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
+  src: url(../../fonts/manbowlines.ttf);
 }
 
 
-.glowtest {
-  color: #fff;
-  text-align: left;
-  -webkit-animation: glowtest 1s ease-in-out infinite alternate;
-  -moz-animation: glowtest 1s ease-in-out infinite alternate;
-  animation: glowtest 1s ease-in-out infinite alternate;
+/* Content Two for Return to home page screen */
+.label3 {
+text-align: center;
 }
 
-@-webkit-keyframes glowtest {
-  from {
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #e60073, 0 0 20px #e60073, 0 0 25px #e60073, 0 0 30px #e60073, 0 0 35px #e60073;
-  }
-  to {
-    text-shadow: 0 0 10px #fff, 0 0 15px #ff4da6, 0 0 20px #ff4da6, 0 0 25px #ff4da6, 0 0 30px #ff4da6, 0 0 35px #ff4da6, 0 0 40px #ff4da6;
-  }
-}
-
-
-.glowr {
-  color: #fff;
-  text-align: right;
-  -webkit-animation: glowr 1s ease-in-out infinite alternate;
-  -moz-animation: glowr 1s ease-in-out infinite alternate;
-  animation: glowr 1s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes glowr {
-  from {
-    text-shadow: 0 0 1px #fff, 0 0 5px #fff, 0 0 7px #e60073, 0 0 10px #e60073, 0 0 17px #e60073, 0 0 15px #e60073, 0 0 17px #e60073;
-  }
-  to {
-    text-shadow: 0 0 5px #fff, 0 0 7px #ff4da6, 0 0 10px #ff4da6, 0 0 17px #ff4da6, 0 0 15px #ff4da6, 0 0 17px #ff4da6, 0 0 20px #ff4da6;
-  }
-}
-
-
-.glowl {
-  color: #fff;
-  text-align: left;
-  -webkit-animation: glowr 1s ease-in-out infinite alternate;
-  -moz-animation: glowr 1s ease-in-out infinite alternate;
-  animation: glowr 1s ease-in-out infinite alternate;
-}
-
-.glowc {
-  color: #fff;
-  text-align: center;
-  -webkit-animation: glowr 1s ease-in-out infinite alternate;
-  -moz-animation: glowr 1s ease-in-out infinite alternate;
-  animation: glowr 1s ease-in-out infinite alternate;
-}
-
-
-/*for border of box*/
-.glowb {
-  border-radius: 4vw;
-  color: #fff;
-  -webkit-animation: glowb 1s ease-in-out infinite alternate;
-  -moz-animation: glowb 1s ease-in-out infinite alternate;
-  animation: glowb 1s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes glowb {
-  from {
-    box-shadow: 0 0 5px #fff, 0 0 5px #fff, 0 0 7px #e60073, 0 0 10px #e60073, 0 0 17px #e60073, 0 0 15px #e60073, 0 0 17px #e60073;
-  }
-  to {
-    box-shadow: 0 0 10px #fff, 0 0 7px #ff4da6, 0 0 10px #ff4da6, 0 0 17px #ff4da6, 0 0 15px #ff4da6, 0 0 17px #ff4da6, 0 0 20px #ff4da6;
-  }
-}
-
-
-
-
-
-
-.bruh {
-  text-align: center;
-  position: relative;
-  font-family: myfont3;
-
-  font-size: 1em;
-  letter-spacing: 4px;
-  overflow: hidden;
-  background: linear-gradient(90deg, #000, #fff, #000);
-  background-repeat: no-repeat;
-  background-size: 80%;
-  animation: animate 5s linear infinite;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: rgba(255,255,255,0);
-}
-@keyframes animate
-{
-   0%
-   {
-       background-position: -500%;
-   }
-   100%
-   {
-       background-position: 500%;
-   }
-}
 .label2 {
-  -webkit-box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
-  -moz-box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
-  box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
-
-
-
-  padding: 2px 16px;
 
   text-align: center;
   text-transform: uppercase;
-
+  letter-spacing: 2px;
+  font-size: 2.4em;
+  line-height: 0.75em
   color: #CAD1D1;
 }
 
 .label2 p {
-  font-family: myfont4, serif;
+  font-family: myfont1, serif;
   letter-spacing: 4px;
-  font-size: 2.2em;
+  font-size: 2.4em;
   line-height: 0.75em
 }
 /* Content Two for Return to home page screen */
-
 
 /* width */
 ::-webkit-scrollbar {
@@ -181,6 +53,7 @@ a, a:hover {
 
 a {
     color: gray;
+    font-size: .8em;
 }
 
 a:hover {
@@ -212,7 +85,7 @@ h2 {
 }
 
 * { margin: 0; padding: 0; }
-#page{display:table;margin:0px auto;}
+#page{display:table;overflow:hidden;margin:0px auto;}
 *:first-child+html #page {position:relative;}/*ie7*/
 * html #page{position:relative;}/*ie6*/
 
@@ -234,7 +107,7 @@ html,body{height:100%;}
 }
 
 html{
-  background:url(../images/daily/4.jpg);
+  background:url(../../images/entries/4.jpg);
 }
 
 /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
@@ -278,42 +151,21 @@ html {
 }
 
 h1 {
-  font-family: 'myfont333';
+  font-family: 'myfont4';
   color:white;
   font-size: 30px;
-}
-h3{
-  font-family: 'myfont3';
-  color:white;
-  font-size: 25px;
   text-align: left;
 }
+
 
 p {
   font-family: 'myfont3';
   font-size: 20px;
-  color:white;
 }
-/*img {
--webkit-box-shadow: 0 0px 3px 3px #555555;
--moz-box-shadow: 0 0px 3px 3px #555555;
-box-shadow: 0 0 3px 3px #353535;
-border-radius: 1vw;
-}*/
 img {
-  border-radius: 1vw;
-  -webkit-animation: glowb 1s ease-in-out infinite alternate;
-  -moz-animation: glowb 1s ease-in-out infinite alternate;
-  animation: glowb 1s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes glowb {
-  from {
-    box-shadow: 0 0 5px #fff, 0 0 5px #fff, 0 0 7px #e60073, 0 0 10px #e60073, 0 0 17px #e60073, 0 0 15px #e60073, 0 0 17px #e60073;
-  }
-  to {
-    box-shadow: 0 0 10px #fff, 0 0 7px #ff4da6, 0 0 10px #ff4da6, 0 0 17px #ff4da6, 0 0 15px #ff4da6, 0 0 17px #ff4da6, 0 0 20px #ff4da6;
-  }
+-webkit-box-shadow: 0 8px 4px 4px #555555;
+-moz-box-shadow: 0 8px 4px 4px #555555;
+box-shadow: 0 0 4px 4px #555555;
 }
 .top {
   text-align: center;
@@ -321,44 +173,17 @@ img {
   margin-top: .01vw;
 }
 .main{
-  text-align: center;
+  text-align: left;
   padding: 3vw;
   margin-top: 1vw;
-  border:.1vw solid gray;
-  border-radius: 4vw;
-  background: url(../images/daily/1.png) repeat;
+  border:.2vw solid white;
+  border-radius: 1vw;
+  background: url(../../images/sub/2.png) repeat;
   background-color: black;
   background-size: 26vw;
 }
-
-.main p {
+.main p{
   text-align: left;
-  color: white;
-}
-.left {
-  text-align: left;
-  color: white;
-}
-.right {
-  text-align: right;
-  color: white;
-}
-.center {
-  text-align: center;
-  color: white;
-}
-
-.main2{
-  text-align: center;
-  padding: 3vw;
-  margin-top: 1vw;
-  border:.1vw solid gray;
-  border-radius: 4vw;
-  background: url(../images/daily/1.png) repeat;
-  background-color: black;
-  background-size: 26vw;
-}
-.main2 p{
   color: white;
 }
 
@@ -554,7 +379,7 @@ table {
   table-layout: fixed;
 }
 
-/*collapsible shit, credit to https://alligator.io/css/collapsible/ */
+
 
 .wrap-collabsible {
   margin-bottom: 1.2rem 0;
@@ -656,6 +481,3 @@ input[type='checkbox'] {
 .img-holder {position: relative; display: inline-block;}
 .img-holder img {display: block;}
 .img-holder p {position: absolute; top: 50%; left: 0; right: 0; transform: translate(0, -50%); text-align: center; color: #fff; text-shadow: 0 0 15px;}
-#ddd{
-  text-align:center;
-}
