--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -38,6 +38,8 @@
 /* (sa2 tails voice) customize your settings here! */
 .rowRowFightThePower{max-width:820px;margin-left:auto;margin-right:auto;padding:30px;border-radius:3px;}
 body {
+  background-color: black;
+  animation: fade-in 2s;
 	cursor:url(../images/nav/rsz_hover.png), auto;
 }
 a {
