--- a/css/oldpagescss/spam.css
+++ b/css/oldpagescss/spam.css
@@ -16,21 +16,8 @@
   src: url(../fonts/manbowlines.ttf);
 }
 body{
-    background-image:url(../images/img/4.gif);
-    text-shadow: -0.09em 0 0.5px rgba(255, 176, 219, 0.9);
+    background-image:url(../images/art/1.jpg);
 }
-
-
-
-
-
-
-
-.rr {
-    font-size: 2.3em;
-
-}
-
 /* width */
 ::-webkit-scrollbar {
 		width: 10px;
@@ -57,24 +44,24 @@ body{
         135deg,
         #000,
         #000 10px,
-        #9999cc 10px,
-        #9999cc 20px
+        white 10px,
+        white 20px
     ) 20;
 }
 
 
 #content {
-    -webkit-box-shadow: 0 8px 4px 1px #9999cc;
-    -moz-box-shadow: 0 8px 4px 1px #9999cc;
-    box-shadow: 0 0 4px 1px #9999cc;
+    -webkit-box-shadow: 0 8px 4px 1px white;
+    -moz-box-shadow: 0 8px 4px 1px white;
+    box-shadow: 0 0 4px 1px white;
     min-height: 320px;
 }
 
 /* Content Two for Return to home page screen */
 #content2 {
-    -webkit-box-shadow: 0 8px 4px 1px #9999cc;
-    -moz-box-shadow: 0 8px 4px 1px #9999cc;
-    box-shadow: 0 0 4px 1px #9999cc;
+    -webkit-box-shadow: 0 8px 4px 1px white;
+    -moz-box-shadow: 0 8px 4px 1px white;
+    box-shadow: 0 0 4px 1px white;
     min-height: 200px;
 }
 #content2 img.auditorium
@@ -108,8 +95,11 @@ div:not(#content2) + div#content2 {
 
 #content2 {
     background:
-        
-        url('../images/sub/1.jpg');
+        linear-gradient(
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
+        ),
+        url('../images/sub/22B.jpg');
 
     border: 3px double #808080;
 
@@ -120,11 +110,14 @@ div:not(#content2) + div#content2 {
     padding: 4px 8px;
 }
 .label2 {
-    margin: 6px 0;
-    margin-left: 18%;
-    transform: translateX(-6.5%);
+    -webkit-box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
+    -moz-box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
+    box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
+
+
+
     padding: 2px 16px;
-    display: inline-block;
+
     text-align: center;
     text-transform: uppercase;
 
@@ -153,32 +146,35 @@ div:not(#content2) + div#content2 {
 
 body {
     background-color: #000;
-    color: #e7f6f8;
+    color: white;
     font-family: TimesNewRoman, monospace;
     font-size: 62.5%;
 }
 
-a:visited, a:link, a:active {
-    color: rgb(95, 173, 224);
+a, a:hover {
     text-decoration: none;
-    transition: ease-in-out 0.2s;
-    text-shadow: 0.06em 0 0.5px rgba(255, 176, 219, 0.9);
-    font-family: "Consolas", "Andale Mono", "Lucida Console", monospace;  
 }
-  
-  a:hover {
-    font-family: "Consolas", "Andale Mono", "Lucida Console", monospace;
-    color: rgb(255, 145, 178);
-    text-shadow: -0.06em 0 0.5px rgba(255, 176, 219, 0.9);
-  }
+
+a {
+    color: white;
+}
+
+a:hover {
+    color: gray;
+}
 
 p {
     margin: 0;
     padding: 8px 4px;
 }
 
-p, li {
-    font-size: 1.6em;
+p {
+  font-size: 1.6em;
+  line-height: 1.6em;
+}
+
+li {
+    font-size: 2em;
     line-height: 1.6em;
 }
 
@@ -232,7 +228,7 @@ h3 {
     color: white;
     letter-spacing: 2px;
     animation: flicker 0.2s infinite;
-    font-size: 2.8em;
+    font-size: 4em;
     line-height: 1.2em;
 }
 
@@ -271,8 +267,11 @@ hr {
 
 #content, #content_mag {
     background:
-        
-        url('../images/sub/1.jpg');
+        linear-gradient(
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
+        ),
+        url('../images/sub/22B.jpg');
 
     border: 3px double #808080;
 
@@ -287,9 +286,9 @@ hr {
     width: 635px;
     padding: 4px 8px;
 
-    background: url(../images/sub/1.jpg) repeat;
+    background: url(../images/art/2.jpg) repeat;
     border: 20px solid;
-    border-image: url(../images/sub/1.jpg);
+    border-image: url(../images/sub/1.gif);
     box-shadow:
         -1px -1px 0 1px #ececec inset,
         -1px -1px 0 1px #ececec,
@@ -354,10 +353,12 @@ hr {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 .label {
+    -webkit-box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
+    -moz-box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
+    box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
 
-    margin: 6px 0;
+    margin: 16px 0;
     margin-left: 50%;
     transform: translateX(-50%);
     padding: 2px 16px;
@@ -368,8 +369,20 @@ hr {
     color: #CAD1D1;
 }
 
+
+.label3 {
+    -webkit-box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
+    -moz-box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
+    box-shadow: 0 8px 10px -6px rgba(235,235,235,0.5);
+    margin: 20px 0;
+    font-size: 3em;
+    text-align: center;
+    text-transform: uppercase;
+    color: #CAD1D1;
+}
+
 .label p {
-    font-family: myfont4, serif;
+    font-family: myfont, serif;
     letter-spacing: 4px;
     font-size: 3.4em;
     line-height: 0.75em
@@ -388,12 +401,104 @@ hr {
     pointer-events: none;
 }
 
-
+#main::before, #content::before, #content_mag::before, #home_box::before {
+    background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
+    linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+    background-size: 100% 2px, 3px 100%;
+}
 
 
 #site_entry {
     width: 100%;
     text-align: center;
-    margin: -50px 0 0 0;
-    font-family: myfont4, serif;
+    margin: -15px 0 0 0;
+    font-family: myfont, serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*
+#ccontent {
+    -webkit-box-shadow: 0 8px 4px 1px white;
+    -moz-box-shadow: 0 8px 4px 1px white;
+    box-shadow: 0 0 4px 1px white;
+    min-height: 120px;
+}
+*/
+#ccontent img {
+    max-width: 100%;
+    margin: 8px auto;
+    padding: 1px;
+    display: block;
+
+    border: 12px inset #2c2c2c;
+}
+
+/*position for the thing not margin,*/
+#ccontent, #ccontent_head, #ccontent_mag {
+    position: relative;
+    width: 664px;
+    top: -60px;
+    margin: 0 auto 24px;
+    padding: 4px 8px;
+}
+
+/*the actual color stuff*/
+#ccontent, #ccontent_mag {
+    background:
+        linear-gradient(
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
+        ),
+        url('../images/sub/22B.jpg');
+
+    border: 3px double #808080;
+
+    -webkit-box-shadow: 0 8px 4px 1px white;
+    -moz-box-shadow: 0 8px 4px 1px white;
+    box-shadow: 0 0 4px 1px white;
+
+    padding: 4px 8px;
+}
+
+
+/*notneeded
+#ccontent .inline {
+    text-align: center;
+}
+
+#ccontent .inline img {
+    display: inline;
+}
+
+*/
+
+/*notenededed
+#ccontent table {
+    margin: 8px 4px;
+    border-collapse: collapse;
+}
+*/
+#ccontent img.auditorium
+{
+    float: left;
+    margin: 8px 16px 8px 4px;
+}
+
+
+
+/*height*/
+#ccontent {
+    -webkit-box-shadow: 0 8px 4px 1px white;
+    -moz-box-shadow: 0 8px 4px 1px white;
+    box-shadow: 0 0 4px 1px white;
+    min-height: 200px;
 }
