--- a/art/core.css
+++ b/art/core.css
@@ -21,6 +21,18 @@
   }
   
   
+@media (max-aspect-ratio: 7/8) {
+    body {
+      background-image: url(../images/img/daily1.png);
+      background-size: 8px;
+    }
+    .zine-images {
+      flex-direction: column;
+    }
+    .fade {
+        padding-bottom: 2em;
+    }
+  }
   
   
   
