--- a/css/mobile.css
+++ b/css/mobile.css
@@ -45,7 +45,7 @@ a {
 }
 body{
 /*background-color: #7f4a99; #525252*/
-background-color: #171e64;
+background-color: #0c0c0c;
 /* IE6-9 background-size: 50px auto, cover;*/background-attachment:fixed;color:#fff5e0;margin:0;line-height:1.7;}
 body,h1,h2,h3,p{margin-top:0;letter-spacing:.01em;}
 h1{margin-bottom:7px;text-align:center;}
